--- a/mod2-solution/styles.css
+++ b/mod2-solution/styles.css
@@ -2,237 +2,149 @@
 *{
 
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  padding:0;
+  margin:0;
+  margin-right: 10px;
+  margin-left: 5px;
+  
 }
-
-
-p {
-	background-color: grey;
-	margin:10px;
-
-}
-h1{
-	margin-top: 30px;
-	margin-bottom: 30px;
-	font-size: 175%;
-	text-align: center;
-
-}
-
-h2 {
-	font-size: 125%
-}
-
-
-
 
 .row {
 	width: 100%
 }
 
+h1{
+	margin-top: 30px;
+	margin-bottom:30px;
+	font-size: 175%;
+	text-align: center;
+}
+
+body{
+	font-family: "Times New Roman", Times, serif;
+
+}
+p {
+	background-color: grey;
+	margin-top: 40px;
+	padding: 10px;
+
+}
+
+
+h2 {
+	position: absolute;
+	right: -10px;
+	top:0px;
+	border: 1px solid black;
+	font-size: 125%;
+	text-align:center;
+}
+
+
+
+
+
 #box1
 {
 background-color: grey;
-border: solid black 1px;
-
-
 
 }
 
 #box2
 {
 background-color: grey;
-border: solid black 1px;
-
 }
 
 #box3
 {
 background-color: grey;
-border: solid black 1px;
 
 }
 
 
-#fat
+#Chicken
 {
 	background-color: yellow;
-	border: 1px solid black;
-	width: 95px;
+	
+	width: 130px;
 	padding: 5px;
 	text-align: center;
 	
 
 }
 
-#protein
+#Beef
 {
 	background-color: red;
-	border: 1px solid black;
-	width: 125px;
+	
+	width: 130px;
 	padding: 5px;
 	text-align: center;
 	
 }
 
-#carbs
+#Sushi
 {
 	background-color: green;
-	border: 1px solid black;
-	width: 105px;
+	
+	width: 130px;
 	padding: 5px;
 	text-align: center;
 	
 }
 /*********large devices**********/
 @media (min-width: 992px) {
-	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, 
-	.col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, 
-	.col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {   
-			float: left;
+	.col-lg-4 {   
 			
+			margin:10px 15px 10px;
+			padding:10px;
+			float: left;
+			position: relative;
+			border: 1px solid black;
 		}
-
-	.col-lg-1 {
-		width: 8.33%;
-	}
-	.col-lg-2 {
-		width: 16.66%;
-	}
-	.col-lg-3 {
-		width: 25%;
-		} 
-	.col-lg-4 {
-		width: 33.33%;
-	} 
-	.col-lg-5 {
-		width: 41.66%;
-		} 
-	.col-lg-6 {
-		width: 50%;
-		} 
-	.col-lg-7 {
-		width: 58.33%;
-		} 
-	.col-lg-8 {
-		width: 66.66%;
+		.col-lg-4{
+			width:calc(33.33% - 30px);
+		}
 	}
 	
-	.col-lg-9 {
-		width: 74.99%;
-		}
-	.col-lg-10 {
-		width: 83.33%;
-		}
-	.col-lg-11 {
-		width: 91.66%;
-		} 
-		.col-lg-12 {
-			width: 100%;
-		}
-
-	}	   
 	
 	/**********medium devices**************/
 	@media (min-width: 768px) and (max-width: 991px) {
-	.col-md-1, .col-md-2, .col-md-3, .col-md-4, 
-	.col-md-5, .col-md-6, .col-md-7, .col-md-8, 
-	.col-md-9, .col-md-10, .col-md-11, .col-md-12 {   
+	
+	.col-sm-6, .col-sm-12 {   
+			margin: 15px;
+			
+			padding: 10px;
 			float: left;
-		
-		   
+			position: relative;
+			border: 1px solid black;
 	}
 
 
-	.col-md-1 {
-		width: 8.33%;
-	}
-	
-	.col-md-2 {
-		width: 16.66%;
-	}
-	.col-md-3 {
-		width: 25%;
-		} 
-	.col-md-4 {
-		width: 33.33%;
-	} 
-	.col-md-5 {
-		width: 41.66%;
-		} 
 	.col-md-6 {
-		width: 50%;
+		width: calc(50% - 30px);
 		} 
-	.col-md-7 {
-		width: 58.33%;
-		} 
-	.col-md-8 {
-		width: 66.66%;
-	}
 	
-	.col-md-9 {
-		width: 74.99%;
-		}
-	.col-md-10 {
-		width: 83.33%;
-		}
-	.col-md-11 {
-		width: 91.66%;
-		} 
-		.col-md-12 {
-			width: 100%;
+	.col-md-12 {
+		width: calc(100% - 30px);
 		}
 
 	}
 
 	/**********small devices**********/
 	@media (max-width: 767px) {
-	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, 
-	.col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, 
-	.col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {   
+	.col-sm-12 {   
+			margin: 10px;
+			padding: 1px;
 			float: left;
-			
-
+			position: relative;
+			border: 1px solid black;
 	}
 
 
-	.col-sm-1 {
-		width: 8.33%;
-	}
-	.col-sm-2 {
-		width: 16.66%;
-	}
-	.col-sm-3 {
-		width: 25%;
-		} 
-	.col-sm-4 {
-		width: 33.33%;
-	} 
-	.col-sm-5 {
-		width: 41.66%;
-		} 
-	.col-sm-6 {
-		width: 50%;
-		} 
-	.col-sm-7 {
-		width: 58.33%;
-		} 
-	.col-sm-8 {
-		width: 66.66%;
-	}
-	
-	.col-sm-9 {
-		width: 74.99%;
-		}
-	.col-sm-10 {
-		width: 83.33%;
-		}
-	.col-sm-11 {
-		width: 91.66%;
-		} 
 		.col-sm-12 {
-			width: 100%;
+			width: calc(100% - 20px);
 		}
 
 	}	   
